force-app/main/default/objects/Integration_Config__mdt/Integration_Config__mdt.object-meta.xml
<CustomObject>
    <label>Integration Config</label>
    <pluralLabel>Integration Configs</pluralLabel>
    <description>Master integration definition — one record per integration (e.g., Account_To_QuickBooks)</description>
</CustomObject>