force-app/main/default/objects/Integration_Config__mdt/fields/Auth_Config__c.field-meta.xml
<CustomField>
    <fullName>Auth_Config__c</fullName>
    <label>Auth Config</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>Lookup key to Integration_Auth__mdt DeveloperName</description>
</CustomField>