force-app/main/default/objects/Integration_Config__mdt/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <label>Batch Size</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>200</defaultValue>
    <description>Records per batch for Batch execution type</description>
</CustomField>