force-app/main/default/objects/Integration_Config__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Human-readable description of the integration</description>
</CustomField>