force-app/main/default/objects/Integration_Config__mdt/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <label>Endpoint</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>Lookup key to Integration_Endpoint__mdt DeveloperName</description>
</CustomField>