force-app/main/default/objects/Integration_Config__mdt/fields/Execution_Type__c.field-meta.xml
<CustomField>
    <fullName>Execution_Type__c</fullName>
    <label>Execution Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Synchronous</fullName><default>true</default><label>Synchronous</label></value>
            <value><fullName>Queueable</fullName><default>false</default><label>Queueable</label></value>
            <value><fullName>Batch</fullName><default>false</default><label>Batch</label></value>
            <value><fullName>PlatformEvent</fullName><default>false</default><label>Platform Event</label></value>
        </valueSetDefinition>
    </valueSet>
    <description>Async execution strategy</description>
</CustomField>