force-app/main/default/objects/Integration_Config__mdt/fields/External_System__c.field-meta.xml
<CustomField>
    <fullName>External_System__c</fullName>
    <label>External System</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>Target external system label (e.g., QuickBooks, Stripe)</description>
</CustomField>