force-app/main/default/objects/Integration_Config__mdt/fields/Max_Retries__c.field-meta.xml
<CustomField>
    <fullName>Max_Retries__c</fullName>
    <label>Max Retries</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <defaultValue>3</defaultValue>
    <description>Maximum retry attempts for failed integrations</description>
</CustomField>