force-app/main/default/objects/Integration_Config__mdt/fields/Retry_Interval_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Retry_Interval_Seconds__c</fullName>
    <label>Retry Interval (Seconds)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>60</defaultValue>
    <description>Base interval in seconds between retries (exponential backoff applied)</description>
</CustomField>