force-app/main/default/objects/Integration_Config__mdt/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <label>Source Object</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>Salesforce object API name (e.g., Account, Contact)</description>
</CustomField>