force-app/main/default/objects/Integration_Config__mdt/fields/Timeout__c.field-meta.xml
<CustomField>
    <fullName>Timeout__c</fullName>
    <label>Timeout (ms)</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
    <defaultValue>30000</defaultValue>
    <description>HTTP callout timeout in milliseconds (max 120000)</description>
</CustomField>